--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+user1:
+ email: user1@domain.org
+ encrypted_password: x
+ 
+user2:
+ email: user2@domain.org
+ encrypted_password: x
+ 
