--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,9 +6,12 @@
 #
 user1:
  email: user1@domain.org
-# encrypted_password: crypt1
- 
+ encrypted_password: $2a$10$JCJOnIi4I5FDEiKn91QrGOM.3c.L4r9Y24EOvKDaAHK0...
+
 user2:
  email: user2@domain.org
 # encrypted_password: crypt2
- 
+
+# foo:
+#  email: foo@bar.com
+#  encrypted_password: $2a$04$d5Md9Odfj1UpegoeeHIQveeYwmOwiXKh0/E3OhWjI8YG...
